--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -20,6 +21,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.12",
     "resend": "^6.6.0"
   }
